--- a/package.json
+++ b/package.json
@@ -36,15 +36,12 @@
   "dependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.14.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
   "devDependencies": {
-    "typescript": "^4.0.3",
-    "tailwindcss": "^2.0.2",
-    "postcss": "^8.2.1",
-    "autoprefixer": "^10.1.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -53,8 +50,12 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.6",
+    "autoprefixer": "^10.1.0",
     "dotenv": "^8.2.0",
     "node-sass": "^4.13.1",
-    "plop": "^2.7.4"
+    "plop": "^2.7.4",
+    "postcss": "^8.2.1",
+    "tailwindcss": "^2.0.2",
+    "typescript": "^4.0.3"
   }
 }
