--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "description": "boilerplate react para iniciar um projeto base",
   "author": "Raul Melo",
   "license": "ISC",
+  "homepage": "https://raulmelo.github.io/wiz-doc-stencil/",
   "scripts": {
     "prestart": "yarn tailwind",
     "start": "react-scripts start",
-    "prebuild": "yarn tailwind",
+    "predeploy": "yarn tailwind && npm run build",
+    "deploy": "gh-pages -b git-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -53,6 +55,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.6",
     "autoprefixer": "^10.1.0",
+    "gh-pages": "^3.1.0",
     "dotenv": "^8.2.0",
     "node-sass": "^4.13.1",
     "plop": "^2.7.4",
