--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "scripts": {
     "prestart": "yarn tailwind",
     "start": "react-scripts start",
-    "predeploy": "yarn tailwind && npm run build",
-    "deploy": "gh-pages -b git-pages -d build",
+    "predeploy": "yarn tailwind && yarn build",
+    "deploy": "yarn cleanup && gh-pages -b git-pages -d build",
+    "cleanup": "rm -rf node_modules/gh-pages/.cache",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
